air lily achemy expand

--- a/Resources/Prototypes/_CP14/Entities/Objects/Flora/wild.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Flora/wild.yml
@@ -292,12 +292,12 @@
   - type: Extractable
     juiceSolution:
       reagents:
-      - ReagentId: CP14YellowDayflinPulp #TODO
+      - ReagentId: CP14AirLily
         Quantity: 4
   - type: SolutionContainerManager
     solutions:
       food:
         maxVol: 5
         reagents:
-        - ReagentId: CP14YellowDayflinPulp #TODO
+        - ReagentId: CP14AirLily
           Quantity: 4
