--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/air_lily.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/air_lily.yml
@@ -24,7 +24,7 @@
 # Splitting
 
 - type: reaction
-  id: CP14BlueAmanitaSplitting
+  id: CP14AirLilySplitting
   minTemp: 450
   priority: 3
   reactants:
