--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Biome/biomeSpawner.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Biome/biomeSpawner.yml
@@ -84,3 +84,15 @@
       - state: frame
   - type: CP14BiomeSpawner
     biome: CP14SnowlandTestResult
+
+- type: entity
+  id: CP14BiomeSpawnerSwamp
+  parent: CP14BaseBiomeSpawner
+  suffix: Swamp
+  components:
+  - type: Sprite
+    layers:
+      - state: forest
+      - state: frame
+  - type: CP14BiomeSpawner
+    biome: CP14SwampFill
