add air lilies into demiplanes, nerf mobs, remove xeno

--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_caves_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_caves_ring.yml
@@ -6,6 +6,7 @@
   tags:
   - CP14DemiplaneOres
   - CP14DemiplaneUnderground
+  - CP14DemiplanePeacefulAnimals
 
 - type: dungeonConfig
   id: CP14DemiplaneCavesRing
