--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grassland_island_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grassland_island_ring.yml
@@ -6,6 +6,7 @@
   tags:
   - CP14DemiplaneOpenSky
   - CP14DemiplaneHerbals
+  - CP14DemiplanePeacefulAnimals
   components:
   - type: MapLight
     ambientLightColor: "#BFEEFFFF"
