--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
@@ -7,6 +7,8 @@
   - CP14DemiplaneOres
   - CP14DemiplaneHerbals
   - CP14DemiplaneOpenSky
+  - CP14DemiplanePeacefulAnimals
+  - CP14DemiplaneWater
   components:
   - type: MapLight
     ambientLightColor: "#BFEEFFFF"
