--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grass_geode.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grass_geode.yml
@@ -10,7 +10,7 @@
   - CP14DemiplaneWater
 
 - type: dungeonConfig
-  id: CP14DemiplaneGrassGeode
+  id: CP14DemiplaneSwampGeode
   layers:
     # Masks
     - !type:PrototypeDunGen
