--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/MapLight/mapLight.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/MapLight/mapLight.yml
@@ -33,6 +33,16 @@
     ambientLightColor: "#09010f"
 
 - type: cp14DemiplaneModifier
+  id: MapLightDarkGreen
+  tiers:
+    - 1
+  categories:
+    MapLight: 1
+  components:
+  - type: MapLight
+    ambientLightColor: "#031f04"
+
+- type: cp14DemiplaneModifier
   id: MapLightDarkNight
   tiers:
     - 1
