--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grass_geode.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grass_geode.yml
@@ -1,32 +1,16 @@
 - type: cp14DemiplaneLocation
-  id: T1GrassGeode
-  tier: 2
-  locationConfig: CP14DemiplaneGrassGeode
+  id: T1SwampGeode
+  tier: 1
+  locationConfig: CP14DemiplaneSwampGeode
   name: cp14-demiplane-location-cave-grass
   tags:
   - CP14DemiplaneOres
   - CP14DemiplaneHerbals
   - CP14DemiplaneUnderground
+  - CP14DemiplaneWater
 
 - type: dungeonConfig
-  id: CP14EdTestLayers
-  layers:
-    - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrassGeode
-    #- !type:EntityTableDunGen
-    #  minCount: 20
-    #  maxCount: 20
-    #  table: !type:GroupSelector
-    #    children:
-    #    - id: CP14DemiplanePassway
-    - !type:OreDunGen
-      entity: CP14DemiplanePassway
-      count: 20
-      minGroupSize: 1
-      maxGroupSize: 1
-
-- type: dungeonConfig
-  id: CP14DemiplaneGrassGeode
+  id: CP14DemiplaneSwampGeode
   layers:
     # Masks
     - !type:PrototypeDunGen
@@ -35,41 +19,19 @@
       proto: CP14DemiplaneGrassGeodeFloorMaskStone
     - !type:PrototypeDunGen
       proto: CP14DemiplaneGrassGeodeFloorMaskAir
-    - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrassGeodeFloorMaskWater
     # Biomes
     - !type:BiomeDunGen
       biomeTemplate: CP14CavesIndestructibleFill
       tileMask:
       - Plating
     - !type:BiomeDunGen
-      biomeTemplate: CP14GrasslandTestResult
+      biomeTemplate: CP14SwampFill
       tileMask:
       - CP14FloorGrass
     - !type:BiomeDunGen
       biomeTemplate: CP14CavesGeneric
       tileMask:
       - CP14FloorSand
-    - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrassGeodeFillWater
-
-- type: dungeonConfig
-  id: CP14DemiplaneGrassGeodeFloorMaskWater
-  layers:
-  - !type:NoiseDistanceDunGen
-    size: 80, 80
-    distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.7
-    layers:
-    - tile: CP14FloorDirt
-      threshold: 0.70
-      noise:
-        frequency: 0.030
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        octaves: 5
-        lacunarity: 2
-        gain: 0.5
 
 - type: dungeonConfig
   id: CP14DemiplaneGrassGeodeFloorMaskAir
@@ -124,14 +86,3 @@
         octaves: 5
         lacunarity: 2
         gain: 0.5
-
-- type: dungeonConfig
-  id: CP14DemiplaneGrassGeodeFillWater
-  reserveTiles: true
-  data:
-    entities:
-      Fill: CP14FloorWater
-  layers:
-  - !type:FillGridDunGen
-    allowedTiles:
-    - CP14FloorDirt
