--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/skeleton.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/skeleton.yml
@@ -106,6 +106,7 @@
   - type: Inventory
     templateId: CP14Human
   - type: TransferMindOnGib
+  - type: CP14KnowledgeStorage
 
 - type: entity
   parent: CP14BaseSpeciesDummy
