--- a/Resources/Prototypes/_CP14/Entities/Clothing/Pants/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Pants/base.yml
@@ -12,6 +12,11 @@
     - pants
   - type: Sprite
     state: icon
+  - type: Butcherable
+    butcheringType: Knife
+    spawned:
+    - id: CP14Cloth1
+      amount: 1
 
 - type: entity
   parent: CP14ClothingPantsBase
