--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/meat.yml
@@ -27,6 +27,9 @@
   - type: InternalTemperature
     thickness: 0.02
     area: 0.02 # arbitrary number that sounds right for a slab of meat
+  - type: Tag
+    tags:
+    - CP14Meat
 
 - type: entity
   id: CP14FoodMeatSliceBase
@@ -48,6 +51,9 @@
   - type: InternalTemperature
     thickness: 0.006
     area: 0.006 # 1\3 of meat value
+  - type: Tag
+    tags:
+    - CP14MeatSlice
 
 # Lamb Meat
 
