--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Fun/lol.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Fun/lol.yml
@@ -21,3 +21,27 @@
       count: 10
       minGroupSize: 1
       maxGroupSize: 1
+
+- type: cp14DemiplaneModifier
+  id: LucenTree
+  tiers:
+    - 1
+    - 2
+    - 3
+  generationWeight: 0.1
+  generationProb: 0.1
+  categories:
+    Fun: 1
+  requiredTags:
+  - CP14DemiplaneHerbals
+  - CP14DemiplaneOpenSky
+  layers:
+    - !type:OreDunGen
+      tileMask: 
+      - CP14FloorGrass
+      - CP14FloorGrassLight
+      - CP14FloorGrassTall
+      entity: CP14BaseLucensTreeLarge
+      count: 10
+      minGroupSize: 1
+      maxGroupSize: 1
