fix round leave and manifest

--- a/Resources/Prototypes/_CP14/Entities/Stations/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Stations/base.yml
@@ -6,6 +6,7 @@
   - BaseStationAllEventsEligible
   - BaseStationJobsSpawning
   - BaseStationAlertLevels #Checks fail without it
+  - BaseStationRecords # Required for lobby manifest + cryo leave
   - CP14BaseStationTrading
   - CP14BaseStationCommonObjectives
   - CP14BaseStationSalary
