--- a/Resources/Prototypes/_CP14/Roles/Jobs/Bank/banker.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Bank/banker.yml
@@ -6,6 +6,10 @@
   startingGear: CP14BankerGear
   icon: "CP14JobIconBanker"
   supervisors: cp14-job-supervisors-commandant
+  special:
+  - !type:CP14AddKnowledgeSpecial
+    knowledge:
+    - WoodWork
 
 - type: startingGear
   id: CP14BankerGear
