--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -421,10 +421,7 @@
   - CP14CrystalLampOrangeEmpty
   - CP14BaseSharpeningStone
   - CP14Scissors
-  - CP14Bucket
   - CP14Rope
-  - CP14PenFeather
-  - CP14PaperFolderBlue
   - CP14SilverCoin
   - CP14ModularIronDagger
   - CP14ModularIronSickle
@@ -432,6 +429,8 @@
   - CP14Lighter
   - CP14Torch
   - CP14DemiplaneKeyT1
+  - CP14FluteInstrument
+  - CP14LyraInstrument
 
 - type: loadout
   id: CP14MagicHealingStaff
@@ -463,28 +462,10 @@
     - CP14Scissors
 
 - type: loadout
-  id: CP14Bucket
-  storage:
-    back:
-    - CP14Bucket
-
-- type: loadout
   id: CP14Rope
   storage:
     back:
     - CP14Rope
-
-- type: loadout
-  id: CP14PenFeather
-  storage:
-    back:
-    - CP14PenFeather
-
-- type: loadout
-  id: CP14PaperFolderBlue
-  storage:
-    back:
-    - CP14PaperFolderBlue
 
 - type: loadout
   id: CP14SilverCoin
@@ -527,6 +508,18 @@
   storage:
     back:
     - CP14DemiplaneKeyT1
+
+- type: loadout
+  id: CP14LyraInstrument
+  storage:
+    back:
+    - CP14LyraInstrument
+
+- type: loadout
+  id: CP14FluteInstrument
+  storage:
+    back:
+    - CP14FluteInstrument
 
 # Keys
 
@@ -729,11 +722,6 @@
       !type:SpeciesRequirement
       species:
       - CP14Dwarf
-  - !type:JobRequirementLoadoutEffect
-    requirement:
-      !type:RoleTimeRequirement
-      role: CP14JobInnkeeper
-      time: 7200 # 2 hour
   - !type:JobRequirementLoadoutEffect
     requirement:
       !type:TraitsRequirement
