--- a/Resources/Prototypes/themes.yml
+++ b/Resources/Prototypes/themes.yml
@@ -1,12 +1,12 @@
 - type: uiTheme
   id: SS14DefaultTheme
-  path: /Textures/Interface/CrystallPunk/ #Edited for CP14
+  path: /Textures/Interface/Default/
   colors:
     whiteText: "#FFF5EE"
     slotSelectedGold: "#e6b812"
     slotColor: "#0f1215"
-    slotOutline: "#4a3930" #Edited CP14
-    slotText: "#503b33" #Edited CP14
+    slotOutline: "#333850"
+    slotText: "#333850"
     nanoGold: "#A88B5E"
     goodGreenFore: "#31843E"
     concerningOrangeFore: "#A5762F"
