--- a/Resources/Prototypes/_CP14/Roles/Antags/Sociopath.yml
+++ b/Resources/Prototypes/_CP14/Roles/Antags/Sociopath.yml
@@ -25,6 +25,7 @@
   components:
   - type: MindRole
     antagPrototype: CP14Sociopath
+    roleType: SoloAntagonist
     exclusiveAntag: true
   - type: CP14SociopathRole
   - type: RoleBriefing
