--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/workbenchs.yml
@@ -14,6 +14,8 @@
     state: filler
   - type: ActivatableUI
     key: enum.CP14WorkbenchUiKey.Key
+    requiresComplex: true
+    singleUser: true
   - type: Climbable
   - type: Clickable
   - type: CP14Workbench
