--- a/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
@@ -91,3 +91,25 @@
     CP14LucensWoodenPlanks: 2
   result: CP14ModularGripLucensLong
   knowledgeRequired: WoodWork
+
+- type: CP14Recipe
+  id: CP14Bow
+  tag: CP14RecipeWorkbench
+  craftTime: 2
+  entities:
+    CP14String: 1
+  stacks:
+    CP14WoodenPlanks: 2
+  result: CP14BowCombat
+  knowledgeRequired: WoodWork
+
+- type: CP14Recipe
+  id: CP14Arrow
+  tag: CP14RecipeWorkbench
+  craftTime: 3
+  stacks:
+    CP14WoodenPlanks: 1
+    CP14IronBar: 1
+  result: CP14Arrow
+  resultCount: 4
+  knowledgeRequired: WoodWork
