--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -431,6 +431,7 @@
   - CP14DemiplaneKeyT1
   - CP14FluteInstrument
   - CP14LyraInstrument
+  - CP14ClothingBeltQuiver
 
 - type: loadout
   id: CP14MagicHealingStaff
@@ -520,6 +521,12 @@
   storage:
     back:
     - CP14FluteInstrument
+
+- type: loadout
+  id: CP14ClothingBeltQuiver
+  storage:
+    back:
+    - CP14ClothingBeltQuiver
 
 # Keys
 
