--- a/Resources/Prototypes/_CP14/Entities/Structures/Fence/iron_grille.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Fence/iron_grille.yml
@@ -82,3 +82,9 @@
         - MidImpassable
         - LowImpassable
         - WallLayer
+  - type: CP14DoorInteractionPopup
+    interactSound:
+      collection: CP14Doorknob
+      params:
+        variation: 0.03
+        volume: -5
